# ensembl-datacheck-py

./: .gitignore  NOTICE  README.rst  pyproject.toml  requirments.txt
.github/scripts/: verify_headers_and_docs.py
.github/workflows/: pr_check.yml
src/ensembl/: plugin.py  runner.py
src/ensembl/datacheck/: __init__.py  plugin.py  runner.py
src/ensembl/datacheck/checks/: bigbed.py  bigwig.py  ensembl_genome_metadata.py  fasta.py  line_count_match.py  line_length_sample.py  metadata_full.py  vcf.py
src/ensembl/datacheck/checks/automation/: automation_blast_expected_files.py  automation_compara_mongo_load.py  automation_ftp_expected_files.py  automation_genesearch_expected_file.py  automation_genesearh_expected_file.py  automation_genome_browser_files_expected_files.py  automation_refget_expected_files.py  automation_thoas_mongo_load.py  conftest.py  resource_config.json  utils.py
src/ensembl/datacheck/checks/core/: meta_table.py
src/ensembl/datacheck/checks/variation/: bigbed.py  bigwig.py  conftest.py
src/ensembl/datacheck/functions/: content_checks.py  db_checks.py  file_checks.py  io_utils.py  utils.py  vcf_sampling.py
src/ensembl/datacheck/plugin/: __init__.py  cache_manager.py  custom_summary_plugin.py  pytest_hooks.py
src/ensembl/datacheck/plugins/: __init__.py  cache_manager.py  custom_summary_plugin.py  pytest_hooks.py
src/ensembl/datacheck_functions/: content_checks.py  db_checks.py  file_checks.py  utils.py
src/tests/: fasta.py
tests/: test_automation_utils.py  test_utils.py
tests/database/: ensembl_genome_metadata.db  ncbi_taxonomy.db
