[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "ensembl-datacheck-py"
description = "A genomics data checking plugin"
version = "0.1.0"
readme = "README.rst"
requires-python = ">=3.10"
authors = [
    { name = "Ensembl", email = "dev@ensembl.org" },
]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "ensembl-metadata-api @ git+https://github.com/Ensembl/ensembl-metadata-api.git",
    "pytest >= 8.2.2",
    "sqlalchemy >= 2.0",
    "xxhash"
]

[project.urls]
Homepage = "https://beta.ensembl.org"
Repository = "https://github.com/Ensembl/ensembl-datacheck-py"

[project.scripts]
ensembl-datacheck = "ensembl.datacheck.runner:main"

[tool.pytest.ini_options]
testpaths = ["src/ensembl/datacheck/checks/"]
python_files = ["fasta.py"]
python_classes = ["*"]
python_functions = ["check_*"]
filterwarnings = [
    "default::ensembl.datacheck.plugin.EnsemblDatacheckWarning",
    "ignore::pytest.PytestCollectionWarning",
    "ignore::sqlalchemy.exc.MovedIn20Warning"
]

